--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -11,3 +11,15 @@ Get started by **installing Andamio SDK**.
 ```bash
 npm install @andamiojs/sdk
 ```
+
+#### Initiation
+
+```typescript
+const sdk = new AndamioSDK(<base-url>, <network>)
+```
+
+##### Using demeter
+
+```typescript
+const sdk = new AndamioSDK("https://preprod.utxorpc-v0.demeter.run:443", "Preprod", "dmtr_utxorpc...")
+```
