--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -1,5 +1,7 @@
 # Building on Andamio
 
+<img src="/images/general/sdk.jpeg" alt="SDK Image" style={{width: "30%", paddingTop: "20px"}} />
+
 Let's discover **Andamio by using our SDK**.
 
 ## Getting Started
